// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CheckboxInput /> should render a checkbox input with a component as the label 1`] = `
<div
  className="checkbox-input checkboxInput"
>
  <Input
    isButton={false}
    isChecked={false}
    label={
      <FontAwesomeIcon
        type="star"
      />
    }
    name="test-jsx-input"
    type="checkbox"
  />
  <label
    className="checkbox"
    htmlFor="test-jsx-input"
  >
    <FontAwesomeIcon
      type="star"
    />
  </label>
</div>
`;

exports[`<CheckboxInput /> should render a checkbox input with button 1`] = `
<div
  className="checkbox-input checkboxInput"
>
  <Input
    isButton={true}
    isChecked={false}
    label="Hey I am a test string"
    name="test-button-input"
    type="checkbox"
  />
  <label
    className="checkbox checkbox-button"
    htmlFor="test-button-input"
  >
    Hey I am a test string
  </label>
</div>
`;

exports[`<CheckboxInput /> should render a checkbox input without button 1`] = `
<div
  className="checkbox-input checkboxInput"
>
  <Input
    isButton={false}
    isChecked={false}
    label="Hey I am a test string"
    name="test-input"
    type="checkbox"
  />
  <label
    className="checkbox"
    htmlFor="test-input"
  >
    Hey I am a test string
  </label>
</div>
`;
